--- a/www/templates/structure.html
+++ b/www/templates/structure.html
@@ -2,7 +2,11 @@
       <div id="topbar" class="">
         <div id="back">back</div>
         <div id="title"> titolo </div> 
-        <div id="rightbutton"> remove </div> 
+        <div id="rightbutton"> 
+          <div id="rightbutton1">removePrefer</div>
+          <div id="rightbutton2">VistaMappa</div>
+          <div id="rightbutton3">VistaLista</div>
+        </div> 
         <div id="triplebutton">
           <div id="share">share
             <div>menu pop-up</div>
@@ -19,6 +23,7 @@
             <div id="grafo">grafo</div>
             <div id="about" class="bottonmenu">about</div>
             <div id="vicino" class="bottonmenu">vicino</div>
+            <!--<div id="trovami" class="bottonmenu">doveTrovarmi</div>-->
       </div>
     </div>
 
